# erobeam

./: .gitignore  Cargo.toml  README.md  erobeam.toml.example
.devcontainer/: devcontainer.json
src/: anyhow_ext.rs  chobit.rs  config.rs  main.rs  scraper_ext.rs
src/bot/: handler.rs  mod.rs
src/bot/commands/: help.rs  join.rs  leave.rs  mod.rs  np.rs  pause.rs  ping.rs  play.rs  queue.rs  resume.rs  seek.rs  skip.rs  stop.rs
