[package]
name = "erobeam"
version = "0.1.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.68"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.reqwest]
version = "0.11.4"

[dependencies.toml]
version = "0.7.0"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.scraper]
version = "0.14.0"

[dependencies.once_cell]
version = "1.17.0"

[dependencies.serenity]
version = "0.11"
features = ["client", "standard_framework", "voice", "rustls_backend"]

[dependencies.songbird]
version = "0.3.0"

[dependencies.log]
version = "0.4.17"

[dependencies.env_logger]
version = "0.10.0"
